# APFELgrid

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.inc  README  README.md  apfelgrid-config.in  configure.ac  docco_cpp.json  docco_fixed.css  docco_generate.sh  paper.bib  paper.tex  setup.sh
docs/: README.html  docco.css  index.html
docs/tests/: example_conv.html  example_gen.html
example/: example.cc
grids/: fetchTest.sh
m4/: applgrid.m4  ax_ext.m4  openmp.m4
notebooks/: benchmark.ipynb
notebooks/.ipynb_checkpoints/: benchmark-checkpoint.ipynb
src/: APFELgrid.cc  fastkernel.cc  fk_utils.cc  fkgenerator.cc
src/APFELgrid/: APFELgrid.h  common.h  config.h  config.h.in  fastkernel.h  fastkernel.h.in  fk_utils.h  fkgenerator.h  transform.h
src/NNPDF/: exceptions.h  fastkernel.h  fkgenerator.h  transform.h
test/: example.cc  example_conv.cc  example_gen.cc  test0.cc
tests/: clearTestData.sh  example_conv.cc  example_gen.cc  fetchTestData.sh
